add static files thru apache

--- a/docker/000-default.conf
+++ b/docker/000-default.conf
@@ -37,6 +37,13 @@
         Allow from all
 		Require all granted
     </Directory>
+
+	Alias /static /usr/local/blocked/BlockedFrontend/static
+	<Directory /usr/local/blocked/BlockedFrontend/static>
+        Order deny,allow
+        Allow from all
+		Require all granted
+	</Directory>
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
