--- a/BlockedFrontend/data/flagreasons.yml
+++ b/BlockedFrontend/data/flagreasons.yml
@@ -7,6 +7,7 @@ reasons:
 - Domain does not resolve
 - Domain may be abusive
 - Reverse proxy failure
+- No court order identifiable
 
 abusetypes:
   redirects: Click fraud/redirects
