use ISP list from data file

--- a/BlockedFrontend/data/isps.yml
+++ b/BlockedFrontend/data/isps.yml
@@ -40,3 +40,16 @@ eu:
   nl:
     - upc-nl
     - xs4all
+
+# used in ispreports admin list view
+reportable_isps:
+  - "BBFC"
+  - "Vodafone"
+  - "O2"
+  - "EE"
+  - "Three"
+  - "Sky"
+  - "VirginMedia"
+  - "TalkTalk"
+  - "BT"
+  - "BT-Strict"
